[KITCHEN-7358][CDH-27572] Increase permgen size to fix orphanged processes issue from unit tests.